# llm-eval-suite

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  observability.py
app/data/: golden_dataset.json
app/evaluators/: faithfulness.py  geval.py  ragas_deepeval.py  relevance.py  synthetic_generator.py
app/reports/: generator.py
reports/: eval_details.json  eval_summary.md
tests/: test_eval_suite.py
tests/unit/: test_enterprise_eval.py
